web-infras/parser/tests/fixtures/esprima/ES6/identifier/module_await/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,1)
1|await = 0;
 |^
